--- a/app_code/pubspec.yaml
+++ b/app_code/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   flex_color_scheme: 6.1.2 # Compatible with Dart >=3.0.0
   simple_gradient_text: 1.2.4
   flutter_spinkit: ^5.1.0 # Compatible with Flutter 3.13.0 and Dart >=3.0.0
-
+  permission_handler: 11.0.0
 
 dev_dependencies:
   flutter_test:
